src/objects/Marqeta_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Time__c</fullName>
        <label>Activation_Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Number__c</fullName>
        <label>Approval Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marqeta Cards</relationshipLabel>
        <relationshipName>Marqeta_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>last_four_digits__c</fullName>
        <label>last four digits</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marqeta Cards</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA # {0000}</displayFormat>
        <label>Marqeta Accounts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marqeta Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>